feat(ui): make sidebar responsive for mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboards de Auditoría</title>
+    <title>Nemesis V1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
@@ -57,6 +57,9 @@
         </ul>
     </div>
     <div class="main-content">
+        <button class="sidebar-toggle-btn" type="button">
+            <i class="bi bi-list"></i>
+        </button>
         <div id="analyst-dashboard" class="dashboard-section d-none">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-4">
                 <h1 id="analyst-title" class="h2 fw-bold"></h1>
