--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <h3 class="text-center mb-4">DATA HUB</h3>
+        <h3 class="text-center mb-4">NEMESIS</h3>
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a id="link-analyst" class="nav-link dashboard-link" data-target="analyst-dashboard" href="#">
