feat(frontend): Implementar splash screen con animación de 8 segundos
Se añade una pantalla de carga inicial (splash screen) que muestra una animación en video durante 8 segundos antes de cargar el contenido principal de la aplicación.

- Se modifica 'index.html' para incluir la estructura del splash screen.

- Se actualiza 'style.css' para dar estilo a la pantalla de carga y asegurar que ocupe toda la pantalla.

- Se añade la lógica en 'script.js' para controlar la visibilidad del splash screen y la transición al contenido principal después de 8 segundos.

- Se incluye el video de la animación en la carpeta 'frontend/animaciones'.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="themes.css">
 </head>
 <body>
+    <div id="splash-screen">
+        <video id="splash-video" src="animaciones/animacion_menesis.mp4" autoplay muted playsinline></video>
+    </div>
+    <div id="app-container" class="d-none">
     <div class="sidebar">
         <h3 class="text-center mb-4">NEMESIS</h3>
         <ul class="nav flex-column">
@@ -425,6 +429,7 @@
         </div>
     </div>
     
+    </div> <!-- Cierre de app-container -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
