--- a/frontend/index.html
+++ b/frontend/index.html
@@ -126,7 +126,7 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h5 class="card-title">Auditorías Recientes</h5>
-                                <button class="btn btn-primary"><i class="bi bi-download"></i> Descargar Informe</button>
+                                <button class="btn btn-primary" id="download-report-btn"><i class="bi bi-download"></i> Descargar Informe</button>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover table-dark">
