--- a/frontend/index.html
+++ b/frontend/index.html
@@ -184,7 +184,7 @@
                                     <span class="input-group-text" id="scan-icon"><i class="bi bi-qr-code-scan"></i></span>
                                     <input type="text" class="form-control" placeholder="Escanea el SKU del producto..." id="scan-input">
                                     <!-- Botón para escanear con cámara -->
-                                    <button class="btn btn-outline-secondary d-none" type="button" id="start-camera-scan-btn" title="Escanear con cámara">
+                                    <button class="btn btn-outline-secondary" type="button" id="start-camera-scan-btn" title="Escanear con cámara">
                                         <i class="bi bi-camera-video"></i>
                                     </button>
                                 </div>
