fix: Corregir error de importación en websockets

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -315,19 +315,14 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Auditorías Recientes</h5>
+                            <h5 class="card-title">Auditorías del Día</h5>
                             <div class="table-responsive">
                                 <table class="table table-hover table-dark">
                                     <thead>
                                         <tr>
-                                            <th>ID</th>
-                                            <th>Ubicación</th>
+                                            <th>Orden de Traslado</th>
                                             <th>Auditor</th>
-                                            <th>Fecha</th>
-                                            <th>Estado</th>
-                                            <th>Productos</th>
                                             <th>% Cumplimiento</th>
-                                            <th>Acciones</th>
                                         </tr>
                                     </thead>
                                     <tbody id="admin-audits-table-body">
