--- a/frontend/index.html
+++ b/frontend/index.html
@@ -259,7 +259,7 @@
                                     </button>
                                 </div>
                                 <!-- Panel de Auditoría Colaborativa (reemplaza el modal) -->
-                                <div id="collaborative-panel" class="d-none mt-4">
+                                <div id="collaborative-panel" class="d-none mt-4" tabindex="-1">
                                     <h5 class="text-white">Asignar Colaboradores</h5>
                                     <form id="collaborative-audit-form">
                                         <div class="mb-3">
@@ -322,6 +322,7 @@
                                         <tr>
                                             <th>Orden de Traslado</th>
                                             <th>Auditor</th>
+                                            <th>Estado</th>
                                             <th>% Cumplimiento</th>
                                         </tr>
                                     </thead>
