--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,7 +150,18 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h5 class="card-title">Auditorías Recientes</h5>
-                                <button class="btn btn-primary" id="download-report-btn"><i class="bi bi-download"></i> Descargar Informe</button>
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-download"></i> Descargar Informe
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#" id="download-general-excel">General (Excel)</a></li>
+                                        <li><a class="dropdown-item" href="#" id="download-general-pdf">General (PDF)</a></li>
+                                        <li><hr class="dropdown-divider"></li>
+                                        <li><a class="dropdown-item" href="#" id="download-novelties-excel">Detalle Novedades (Excel)</a></li>
+                                        <li><a class="dropdown-item" href="#" id="download-novelties-pdf">Detalle Novedades (PDF)</a></li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover table-dark">
@@ -238,7 +249,7 @@
                                         <thead>
                                             <tr>
                                                 <th>ID</th>
-                                                <th>Ubicación</th>
+                                                <th>Orden de traslado</th>
                                                 <th>Fecha</th>
                                                 <th>Estado</th>
                                                 <th>Acciones</th>
@@ -446,6 +457,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    <!-- Librerías para exportar informes -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+    <!-- Fin de librerías para informes -->
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
