--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,6 +121,20 @@
                                 <div class="col-md-3 d-flex align-items-end">
                                     <button type="submit" class="btn btn-primary w-100"><i class="bi bi-funnel"></i> Filtrar</button>
                                 </div>
+                                <div class="col-md-3 d-flex align-items-end">
+                                    <div class="btn-group w-100">
+                                        <button type="button" class="btn btn-secondary dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="bi bi-download"></i> Descargar Informe
+                                        </button>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#" id="download-general-excel">General (Excel)</a></li>
+                                            <li><a class="dropdown-item" href="#" id="download-general-pdf">General (PDF)</a></li>
+                                            <li><hr class="dropdown-divider"></li>
+                                            <li><a class="dropdown-item" href="#" id="download-novelties-excel">Detalle Novedades (Excel)</a></li>
+                                            <li><a class="dropdown-item" href="#" id="download-novelties-pdf">Detalle Novedades (PDF)</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -150,18 +164,6 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h5 class="card-title">Auditorías Recientes</h5>
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-download"></i> Descargar Informe
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#" id="download-general-excel">General (Excel)</a></li>
-                                        <li><a class="dropdown-item" href="#" id="download-general-pdf">General (PDF)</a></li>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="#" id="download-novelties-excel">Detalle Novedades (Excel)</a></li>
-                                        <li><a class="dropdown-item" href="#" id="download-novelties-pdf">Detalle Novedades (PDF)</a></li>
-                                    </ul>
-                                </div>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover table-dark">
