--- a/frontend/index.html
+++ b/frontend/index.html
@@ -270,7 +270,13 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Productos de la Auditoría</h5>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <h5 class="card-title">Productos de la Auditoría</h5>
+                                    <div class="form-check form-switch d-none" id="toggle-correct-products-container">
+                                        <input class="form-check-input" type="checkbox" role="switch" id="toggle-correct-products-checkbox" checked>
+                                        <label class="form-check-label" for="toggle-correct-products-checkbox">Ocultar productos correctos</label>
+                                    </div>
+                                </div>
                                 <div class="table-responsive">
                                     <table class="table table-hover table-dark">
                                         <thead>
@@ -297,15 +303,14 @@
                                     </button>
                                 </div>
                                 <!-- Panel de Auditoría Colaborativa (reemplaza el modal) -->
-                                <div id="collaborative-panel" class="d-none mt-4" tabindex="-1">
-                                    <h5 class="text-white">Asignar Colaboradores</h5>
+                                <div id="collaborative-panel" class="d-none mt-4 p-3 border rounded" tabindex="-1">
+                                    <h5 class="text-white mb-3">Asignar Colaboradores</h5>
                                     <form id="collaborative-audit-form">
                                         <div class="mb-3">
-                                            <label for="collaborative-auditors-select" class="form-label">Selecciona uno o más auditores:</label>
-                                            <select id="collaborative-auditors-select" class="form-select" multiple required>
-                                                <!-- Opciones generadas dinámicamente -->
-                                            </select>
-                                            <div class="form-text">Puedes seleccionar varios auditores manteniendo presionada la tecla Ctrl (o Cmd en Mac).</div>
+                                            <label class="form-label">Selecciona uno o más auditores:</label>
+                                            <div id="collaborative-auditors-list" class="list-group" style="max-height: 200px; overflow-y: auto;">
+                                                <!-- Los auditores se renderizarán aquí dinámicamente -->
+                                            </div>
                                         </div>
                                         <div class="d-flex justify-content-end">
                                             <button type="button" class="btn btn-secondary me-2" id="cancel-collaborative-audit">Cancelar</button>
@@ -456,6 +461,68 @@
                 </div>
             </div>
         </div>
+
+        <!-- ====== Modales para Auditoría Colaborativa ====== -->
+
+        <!-- Modal para Registrar Sobrante -->
+        <div class="modal fade" id="surplus-modal" tabindex="-1" aria-labelledby="surplusModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="surplusModalLabel">Registrar Sobrante</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="surplus-modal-message"></p>
+                        <div class="mb-3">
+                            <label for="surplus-quantity" class="form-label">Cantidad Sobrante</label>
+                            <input type="number" class="form-control" id="surplus-quantity" min="1">
+                        </div>
+                        <div class="mb-3">
+                            <label for="surplus-observations" class="form-label">Observaciones</label>
+                            <textarea class="form-control" id="surplus-observations"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-primary" id="confirm-surplus-btn">Registrar Sobrante</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal para Resolver Discrepancia -->
+        <div class="modal fade" id="discrepancy-modal" tabindex="-1" aria-labelledby="discrepancyModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="discrepancyModalLabel">Resolver Discrepancia</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="discrepancy-modal-message"></p>
+                        <div id="discrepancy-actions-container" class="d-grid gap-2">
+                            <!-- Botones se insertan aquí dinámicamente -->
+                        </div>
+                        <div id="discrepancy-manual-input-container" class="d-none mt-3">
+                            <div class="mb-3">
+                                <label for="discrepancy-quantity" class="form-label">Cantidad Encontrada</label>
+                                <input type="number" class="form-control" id="discrepancy-quantity" min="0">
+                            </div>
+                             <div class="mb-3">
+                                <label for="discrepancy-observations" class="form-label">Observaciones</label>
+                                <textarea class="form-control" id="discrepancy-observations"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-primary d-none" id="confirm-discrepancy-btn">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div> <!-- Cierre de app-container -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
