--- a/frontend/index.html
+++ b/frontend/index.html
@@ -304,7 +304,7 @@
                                 </div>
         <!-- Modal para Auditoría Colaborativa -->
         <div class="modal fade" id="collaborativeAuditModal" tabindex="-1" aria-labelledby="collaborativeAuditModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-dialog-centered" style="max-width: 350px;">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="collaborativeAuditModalLabel">Asignar Colaboradores</h5>
