--- a/frontend/index.html
+++ b/frontend/index.html
@@ -457,7 +457,7 @@
                     <div class="modal-body">
                         <form id="collaborative-audit-form">
                             <div class="mb-3">
-                                <label class="form-label">Selecciona uno o más auditores:</label>
+                                <p class="form-label">Selecciona uno o más auditores:</p>
                                 <div id="collaborative-auditors-list" class="list-group" style="max-height: 200px; overflow-y: auto;">
                                     <!-- Los auditores se renderizarán aquí dinámicamente -->
                                 </div>
