--- a/frontend/index.html
+++ b/frontend/index.html
@@ -526,8 +526,29 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                         <button type="button" class="btn btn-primary d-none" id="confirm-discrepancy-btn">Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal para Selección de Producto Múltiple -->
+        <div class="modal fade" id="product-selection-modal" tabindex="-1" aria-labelledby="productSelectionModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="productSelectionModalLabel">Múltiples Coincidencias</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Se encontraron varios productos. Por favor, selecciona el correcto:</p>
+                        <div id="product-selection-list" class="list-group">
+                            <!-- Los productos coincidentes se insertarán aquí -->
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
             </div>
