--- a/frontend/index.html
+++ b/frontend/index.html
@@ -456,6 +456,8 @@
             </div>
         </div>
     </div> <!-- Cierre de app-container -->
+    <!-- Contenedor para Notificaciones Toast -->
+    <div id="toast-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
