--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
                                     <button type="submit" class="btn btn-primary w-100"><i class="bi bi-funnel"></i> Filtrar</button>
                                 </div>
                                 <div class="col-md-3 d-flex align-items-end">
-                                    <div class="btn-group w-100">
+                                    <div class="btn-group w-100 dropup">
                                         <button type="button" class="btn btn-secondary dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                                             <i class="bi bi-download"></i> Descargar Informe
                                         </button>
