--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,21 @@
                             <h5 class="card-title">Filtros</h5>
                             <form id="analyst-filters-form" class="row g-3">
                                 <div class="col-md-3">
+                                    <label for="filter-status" class="form-label">Estatus</label>
+                                    <select id="filter-status" class="form-select">
+                                        <option value="Todos" selected>Todos</option>
+                                        <option value="Pendiente">Pendiente</option>
+                                        <option value="En Progreso">En Progreso</option>
+                                        <option value="Finalizada">Finalizada</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="filter-auditor" class="form-label">Auditor</label>
+                                    <select id="filter-auditor" class="form-select">
+                                        <!-- Opciones de auditores se cargarán dinámicamente -->
+                                    </select>
+                                </div>
+                                <div class="col-md-3">
                                     <label for="filter-start-date" class="form-label">Fecha de Inicio</label>
                                     <input type="date" class="form-control" id="filter-start-date">
                                 </div>
@@ -104,12 +119,12 @@
                                     <label for="filter-end-date" class="form-label">Fecha de Fin</label>
                                     <input type="date" class="form-control" id="filter-end-date">
                                 </div>
-                                <div class="col-md-3 d-flex align-items-end">
+                                <div class="col-md-6 mt-3">
                                     <button type="submit" class="btn btn-primary w-100">
                                         <i class="bi bi-funnel"></i> Filtrar
                                     </button>
                                 </div>
-                                <div class="col-md-3 d-flex align-items-end">
+                                <div class="col-md-6 mt-3">
                                     <button type="button" id="clear-filters-btn" class="btn btn-secondary w-100">
                                         <i class="bi bi-arrow-clockwise"></i> Limpiar
                                     </button>
