--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,11 +11,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="themes.css">
+    <!-- flatpickr datepicker -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css">
 </head>
 <body>
     <div id="splash-screen" class="d-none">
         <video id="splash-video" src="animaciones/animacion_menesis.mp4" autoplay muted playsinline></video>
     </div>
+        <!-- flatpickr script (asegura que esté disponible antes de los módulos que lo usan) -->
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.js"></script>
 
     <div id="login-container" class="container-fluid vh-100 d-flex justify-content-center align-items-center">
         <div class="card p-4" style="width: 100%; max-width: 400px;">
@@ -113,11 +117,12 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label for="filter-start-date" class="form-label">Fecha de Inicio</label>
-                                    <input type="date" class="form-control" id="filter-start-date">
+                                    <!-- use text so flatpickr altInput works consistently -->
+                                    <input type="text" class="form-control" id="filter-start-date" placeholder="dd/mm/YYYY">
                                 </div>
                                 <div class="col-md-3">
                                     <label for="filter-end-date" class="form-label">Fecha de Fin</label>
-                                    <input type="date" class="form-control" id="filter-end-date">
+                                    <input type="text" class="form-control" id="filter-end-date" placeholder="dd/mm/YYYY">
                                 </div>
                                 <div class="col-md-6 mt-3">
                                     <button type="submit" class="btn btn-primary w-100">
