--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,29 +41,15 @@
     </div>
 
     <div id="app-container" class="d-none">
-        <div class="sidebar">
+    <div class="sidebar compact">
             <h3 class="text-center mb-4">NEMESIS</h3>
             <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a id="link-analyst" class="nav-link dashboard-link" data-target="analyst-dashboard" href="#">
-                        <i class="bi bi-graph-up me-2"></i>
-                        <span id="text-analyst">Dashboard Analista</span>
-                    </a>
+                <!-- Compact sidebar: hide dashboard links and show only session controls -->
+                <li class="nav-item session-item">
+                    <a class="nav-link" href="#" data-target="logout"><i class="bi bi-box-arrow-right"></i></a>
                 </li>
-                <li class="nav-item">
-                    <a id="link-auditor" class="nav-link dashboard-link" data-target="auditor-dashboard" href="#">
-                        <i class="bi bi-file-earmark-bar-graph me-2"></i>
-                        <span id="text-auditor">Dashboard Auditor</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a id="link-admin" class="nav-link dashboard-link" data-target="admin-dashboard" href="#">
-                        <i class="bi bi-person-fill-gear me-2"></i>
-                        <span id="text-admin">Dashboard Administrador</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" data-target="logout"><i class="bi bi-box-arrow-right me-2"></i> Cerrar Sesión</a>
+                <li class="nav-item session-item">
+                    <a class="nav-link" href="#" id="theme-toggle-small" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-palette-fill"></i></a>
                 </li>
                 <!-- Selector de Temas -->
                 <li class="nav-item dropdown mt-3 px-2">
