--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,7 +49,8 @@
                     <a class="nav-link" href="#" data-target="logout"><i class="bi bi-box-arrow-right"></i></a>
                 </li>
                 <li class="nav-item session-item">
-                    <a class="nav-link" href="#" id="theme-toggle-small" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-palette-fill"></i></a>
+                    <!-- This button is NOT a bootstrap dropdown toggle itself; it will proxy to the full theme button -->
+                    <a class="nav-link" href="#" id="theme-toggle-small"><i class="bi bi-palette-fill"></i></a>
                 </li>
                 <!-- Selector de Temas -->
                 <li class="nav-item dropdown mt-3 px-2">
