--- a/frontend-app/index.html
+++ b/frontend-app/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0d6efd" />
     <meta name="description" content="Sistema de gestión de auditorías de inventario" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Nemesis - Frontend App (React)</title>
+    <title>Nemesis - V1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
