--- a/frontend-app/index.html
+++ b/frontend-app/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="theme-color" content="#0d6efd" />
     <meta name="description" content="Sistema de gestión de auditorías de inventario" />
     <link rel="manifest" href="/manifest.json" />
